2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  compile is now a virtual target

2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* HACKING:
	  expand on the file layout
	* src/com/fluendo/examples/OggPerf.java:
	* src/com/fluendo/examples/OggTheoraPerf.java:
	* src/com/fluendo/examples/Player2.java:
	* src/com/fluendo/examples/Player3.java:
	* src/com/fluendo/jst/Sink.java:
	* src/com/fluendo/plugin/VideoSink.java:
	  more build cleanups

2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  remove plugins.ini rule
	  invoke includes rule for applet builds and compile-examples

2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  fix up various build issues; can now run the Player2 example with
	  java --cp output/build/debug com.fluendo.examples.Player2 http://stream.fluendo.com:8800

2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  various build fixes so that plugins are correctly found
	  add compile-examples

2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.properties:
	* build.xml:
	  various cleanups for the build
	* src/com/fluendo/jst/Pipeline.java:
	* src/com/fluendo/jst/Sink.java:
	* src/com/fluendo/plugin/Sink.java:
	  move Sink.java to jst, as it's used in Pipeline

2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.config.sample:
	  add a sample build.config file to customize
	* build.xml:
	  fix up clean rule
	  add more jars

2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile:
	* build.xml:
	* gen-Configure:
	  remove gen-Configure; implement it in ant; output during build

2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  split out more of the jars and compiles

2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  always include stubs in classpath for now;